--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "export"
   ],
   "devDependencies": {
-    "cheerio": "^1.0.0-rc.2",
-    "uglify-js": "^3.4.9",
+    "cheerio": "^1.0.0-rc.3",
+    "uglify-js": "^3.8.0",
     "watch": "^1.0.2"
   },
   "types": "./index.d.ts",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "canvaskit-wasm": "^0.13.0"
+  }
 }
